fix horizontal scrollbar by making footer width 100% not 100vW

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ img.displaySlide {
 }
 
 .static img {
+  display: block;
   width: 100%;         
   height: 100%;
   object-fit: cover;   
@@ -170,7 +171,7 @@ ul.footer-list {
 
 
 .footer-bottom {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   margin-top: 30px;
   font-size: 1rem;
@@ -351,4 +352,5 @@ h4 {
 
   body {
     background-color: #f6f6f6;
+    margin: 0;
   }
